# calibre

./: COPYRIGHT  calibre_2.60.0+dfsg.orig.tar.xz.delta  calibre_2.60.0+dfsg.orig.tar.xz.id  calibre_2.71.0+dfsg.orig.tar.xz.delta  calibre_2.71.0+dfsg.orig.tar.xz.id  calibre_2.75.1+dfsg.orig.tar.xz.delta  calibre_2.75.1+dfsg.orig.tar.xz.id  calibre_2.83.0+dfsg.orig.tar.xz.delta  calibre_2.83.0+dfsg.orig.tar.xz.id  calibre_2.85.1+dfsg.orig.tar.xz.delta  calibre_2.85.1+dfsg.orig.tar.xz.id  calibre_3.0.0+dfsg.orig.tar.xz.delta  calibre_3.0.0+dfsg.orig.tar.xz.id  calibre_3.1.1+dfsg.orig.tar.xz.delta  calibre_3.1.1+dfsg.orig.tar.xz.id  calibre_3.10.0+dfsg.orig.tar.xz.delta  calibre_3.10.0+dfsg.orig.tar.xz.id  calibre_3.11.1+dfsg.orig.tar.xz.delta  calibre_3.11.1+dfsg.orig.tar.xz.id  calibre_3.12.0+dfsg.orig.tar.xz.delta  calibre_3.12.0+dfsg.orig.tar.xz.id  calibre_3.13.0+dfsg.orig.tar.xz.delta  calibre_3.13.0+dfsg.orig.tar.xz.id  calibre_3.14.0+dfsg.orig.tar.xz.delta  calibre_3.14.0+dfsg.orig.tar.xz.id  calibre_3.15.0+dfsg.orig.tar.xz.delta  calibre_3.15.0+dfsg.orig.tar.xz.id  calibre_3.15.0.1+dfsg.orig.tar.xz.delta  calibre_3.15.0.1+dfsg.orig.tar.xz.id  calibre_3.16.0+dfsg.orig.tar.xz.delta  calibre_3.16.0+dfsg.orig.tar.xz.id  calibre_3.17.0+dfsg.orig.tar.xz.delta  calibre_3.17.0+dfsg.orig.tar.xz.id  calibre_3.18.0+dfsg.orig.tar.xz.delta  calibre_3.18.0+dfsg.orig.tar.xz.id  calibre_3.19.0+dfsg.orig.tar.xz.delta  calibre_3.19.0+dfsg.orig.tar.xz.id  calibre_3.20.0+dfsg.orig.tar.xz.delta  calibre_3.20.0+dfsg.orig.tar.xz.id  calibre_3.21.0+dfsg.orig.tar.xz.delta  (+526 more)
podofo/: .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODING-STYLE.md  Doxyfile  README.md  SOURCE-LAYOUT.md  TODO.md  cmake_uninstall.cmake.in  conanfile.txt
podofo/.github/: issue_template.md  pull_request_template.md
podofo/.github/codeql/: codeql-config.yml
podofo/.github/workflows/: build-linux.yml  build-mac.yml  build-win-vcpkg.yml  build-win.yml
podofo/cmake/modules/: FindLibidn.cmake  LibraryDebugAndRelease.cmake
podofo/examples/: CMakeLists.txt  COPYING.exception
podofo/examples/helloworld/: CMakeLists.txt  helloworld.cpp
podofo/examples/helloworld-base14/: CMakeLists.txt  helloworld-base14.cpp
podofo/man/: CMakeLists.txt  podofobox.1  podofocolor.1  podofocountpages.1  podofocrop.1  podofoencrypt.1  podofogc.1  podofoimg2pdf.1  podofoimgextract.1  podofoimpose.1  podofoincrementalupdates.1  podofomerge.1  podofopages.1  podofopdfinfo.1  podofotxt2pdf.1  podofotxtextract.1  podofouncompress.1  podofoxmp.1
podofo/playground/: CMakeLists.txt  README.md  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-win.cmd
podofo/src/podofo/: CMakeLists.txt  libpodofo.pc.in  podofo.h  podofo.rc  podofo_config.h.in
podofo/test/: CMakeLists.txt  PdfTestConfig.h.in  README.md
podofo/test/ContentParser/: CMakeLists.txt  main.cpp
podofo/test/CreationTest/: CMakeLists.txt  CreationTest.cpp
podofo/test/FilterTest/: CMakeLists.txt  FilterTest.cpp
podofo/test/FormTest/: CMakeLists.txt  FormTest.cpp
podofo/test/LargeTest/: CMakeLists.txt  LargeTest.cpp
podofo/test/ObjectParserTest/: CMakeLists.txt  ObjectParserTest.cpp
podofo/test/ParserTest/: CMakeLists.txt  ParserTest.cpp
podofo/test/SignTest/: CMakeLists.txt  SignTest.cpp
podofo/test/SignatureTest/: CMakeLists.txt  NSSSignatureGenerator.cpp  NSSSignatureGenerator.h  SignTest.cpp  SignatureGenerator.h  SimpleSignatureGenerator.h
podofo/test/TokenizerTest/: CMakeLists.txt  TokenizerTest.cpp
podofo/test/VariantTest/: CMakeLists.txt  VariantTest.cpp
podofo/test/WatermarkTest/: CMakeLists.txt  WatermarkTest.cpp  WatermarkTest.vcproj
podofo/test/common/: CMakeLists.txt  PdfTest.cpp  PdfTest.h
podofo/test/unit/: BasicTest.cpp  CMakeLists.txt  ColorTest.cpp  DateTest.cpp  DeviceTest.cpp  EncodingTest.cpp  EncryptTest.cpp  FilterTest.cpp  FontTest.cpp  ImageTest.cpp  NameTest.cpp  PageTest.cpp  PageTreeTest.cpp  PainterTest.cpp  ParserTest.cpp  StringTest.cpp  TextExtraction.cpp  TokenizerTest.cpp  VariantTest.cpp  XMPTest.cpp  main.cpp
podofo/tools/: CMakeLists.txt
podofo/tools/podofobox/: CMakeLists.txt  boxsetter.cpp  boxsetter.h  podofobox.cpp
podofo/tools/podofocolor/: CMakeLists.txt  colorchanger.cpp  colorchanger.h  colorspace.cpp  colorspace.h  dummyconverter.cpp  dummyconverter.h  example.lua  graphicsstack.cpp  graphicsstack.h  grayscaleconverter.cpp  grayscaleconverter.h  iconverter.cpp  iconverter.h  lua_compat.h  luaconverter.cpp  luaconverter.h  podofocolor.cpp
podofo/tools/podofocountpages/: CMakeLists.txt  countpages.cpp
podofo/tools/podofocrop/: CMakeLists.txt  podofocrop.cpp
podofo/tools/podofoencrypt/: CMakeLists.txt  podofoencrypt.cpp
podofo/tools/podofogc/: CMakeLists.txt  podofogc.cpp
podofo/tools/podofoimg2pdf/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  podofoimg2pdf.cpp
podofo/tools/podofoimgextract/: CMakeLists.txt  ImageExtractor.cpp  ImageExtractor.h  podofoimgextract.cpp
podofo/tools/podofoimpose/: CMakeLists.txt  README.html  charpainter.cpp  charpainter.h  impositionplan.cpp  impositionplan.h  lua_compat.h  pdftranslator.cpp  pdftranslator.h  planreader_legacy.cpp  planreader_legacy.h  planreader_lua.cpp  planreader_lua.h  podofoimpose.cpp  sample.plan
podofo/tools/podofoincrementalupdates/: CMakeLists.txt  incrementalupdates.cpp
podofo/tools/podofomerge/: CMakeLists.txt  podofomerge.cpp
podofo/tools/podofonooc/: CMakeLists.txt  podofonooc.cpp
podofo/tools/podofopages/: CMakeLists.txt  DeleteOperation.cpp  DeleteOperation.h  MoveOperation.cpp  MoveOperation.h  Operation.h  podofopages.cpp
podofo/tools/podofopdfinfo/: CMakeLists.txt  pdfinfo.cpp  pdfinfo.h  podofopdfinfo.cpp
podofo/tools/podofosign/: CMakeLists.txt  podofosign.cpp
podofo/tools/podofotxt2pdf/: CMakeLists.txt  podofotxt2pdf.cpp
podofo/tools/podofotxtextract/: CMakeLists.txt  podofotxtextract.cpp
podofo/tools/podofouncompress/: CMakeLists.txt  Uncompress.cpp  Uncompress.h  podofouncompress.cpp
podofo/tools/podofoxmp/: CMakeLists.txt  podofoxmp.cpp
(+9061 files in other folders)
