
INSTALL(FILES
  podofobox.1
  podofocolor.1
  podofocountpages.1
  podofocrop.1
  podofogc.1
  podofoencrypt.1
  podofoimg2pdf.1
  podofoimgextract.1
  podofoimpose.1
  podofoincrementalupdates.1
  podofomerge.1
  podofopages.1
  podofopdfinfo.1
  podofotxt2pdf.1
  podofotxtextract.1
  podofouncompress.1
  podofoxmp.1
  DESTINATION ${MANDIR}man1
  )
